make v3 great by improving accuracy + adding ability to query for multiple tags